--- a/cuda/makefile
+++ b/cuda/makefile
@@ -14,14 +14,16 @@ LINKER     := $(CC)
 $(foreach sm,$(SMS),$(eval GENCODE_FLAGS += -gencode arch=compute_$(sm),code=sm_$(sm)))
 # CFLAGS     := -std=c++17 -O0 -g -G
 CFLAGS     := -std=c++17 -O2 -I$(HOME)/local/include -I/usr/local/cuda-12.6/targets/x86_64-linux/include/ 
-LDFLAGS    := -L/usr/local/cuda-12.6/targets/x86_64-linux/lib/ -L$(HOME)/local/lib -lm  -lcublas  -lopenblas -lcupti
+LDFLAGS    := -L/usr/local/cuda-12.6/targets/x86_64-linux/lib/ -L$(HOME)/local/lib -lm  -lcublas  -lopenblas -lcupti -lcuda
 
 UTIL       := copy_matrix.o \
               compare_matrices.o \
               random_matrix.o \
               dclock.o \
               REF_MMult.o \
-              print_matrix.o
+              print_matrix.o \
+			  helper.o \
+			  pm_sampling.o
 
 TEST_OBJS  := test_MMult.o $(NEW).o 
 CUPTI_OBJS  := cupti_MMult.o $(NEW).o 
@@ -35,13 +37,13 @@ CUPTI_OBJS  := cupti_MMult.o $(NEW).o
 all: 
 	make clean;
 	make test_MMult.x
-	#make cupti_MMult.x
+	make cupti_MMult.x
 	make $(NEW).ptx
 
-test_MMult.x: $(TEST_OBJS) $(UTIL) parameters.h
+test_MMult.x: $(TEST_OBJS) $(UTIL) parameters.h helper_cupti.h
 	$(LINKER) $(TEST_OBJS) $(UTIL) $(LDFLAGS) \
         $(BLAS_LIB) -o $(TEST_BIN) $@ 
-cupti_MMult.x: $(CUPTI_OBJS) $(UTIL) parameters.h
+cupti_MMult.x: $(CUPTI_OBJS) $(UTIL) parameters.h helper_cupti.h
 	$(LINKER) $(CUPTI_OBJS) $(UTIL) $(LDFLAGS) \
         $(BLAS_LIB) -o $(TEST_BIN) $@ 
 
